--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
             display: flex;
             gap: 20px;
             margin-bottom: 40px;
+            flex-wrap: wrap; /* 允许换行，解决移动端显示问题 */
         }
         
         .cta-btn {
@@ -324,6 +325,7 @@
             color: var(--text-color);
             transition: all 0.2s;
             flex: 1;
+            min-width: 250px; /* 确保最小宽度，防止过度挤压 */
             box-shadow: 0 2px 5px rgba(0,0,0,0.05);
         }
         
